@@ -1,4 +1,4 @@
-DIR := user/handlers/deny/
+DIR := user/handlers/http/deny/
 SOURCES := http-deny.c
 
 HANDLERS_DENY_TEMP := $(addprefix $(DIR), $(SOURCES))
